# cradle

./: .bumpversion.toml  .coverage  .dockerignore  .eslintrc.cjs  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  Dockerfile  LICENSE  Pipfile  README.md  ansible.cfg  babel.config.json  docker-compose-demo.yml  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose_prod.yml  electron-builder.yml  electron.vite.config.js  entrypoint.sh  eslint.config.mjs  jest.config.js  manage.py  mypy.ini  openapi-spec.yaml  package-lock.json  package.json  pytest.ini  stub.js  tailwind.config.js  to_plate.py  vite.config.js
backend/: .dockerignore  .env.example  .flake8  .gitignore  .gitmodules  Pipfile  README.md  manage.py  notes.md  openapi-spec.yaml  pyproject.toml
backend/access/: admin.py  enums.py  managers.py  models.py  serializers.py  urls.py
backend/core/: decorators.py  fields.py  pagination.py  utils.py
backend/cradle/: asgi.py  celery.py  schema_processors.py  settings_common.py  settings_dev.py  settings_docker.py  settings_test.py  urls.py  utils.py
backend/cradle_statistics/: serializers.py  urls.py  utils.py
backend/dashboards/: serializers.py
backend/deploy/: prod_playbook.yml
backend/docker/: Dockerfile  entrypoint.sh  entrypoint_prod.sh  nginx.conf
backend/entries/: admin.py  enums.py  exceptions.py  managers.py  models.py  serializers.py  tasks.py  urls.py
backend/file_transfer/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/fleeting_notes/: serializers.py  urls.py  views.py
backend/intelio/: apps.py  (+8 more)
(+1476 files in other folders)
